* Add foreman database password which is encrypted with hiera-eyaml * Configure hiera-eyaml

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,5 +1,6 @@
 ---
 :backends:
+  - eyaml
   - yaml
 :logger: console
 :hierarchy:
@@ -10,3 +11,7 @@
   - site
 :yaml:
    :datadir: "/etc/puppet/hiera/%{::environment}/hieradata"
+:eyaml:
+   :datadir: "/etc/puppet/hiera/%{::environment}/hieradata"
+   :pkcs7_private_key: /etc/puppet/secure/keys/private_key.pkcs7.pem
+   :pkcs7_public_key: /etc/puppet/secure/keys/public_key.pkcs7.pem
