* Fix eyaml config to read yaml extension files

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -15,3 +15,4 @@
    :datadir: "/etc/puppet/hiera/%{::environment}/hieradata"
    :pkcs7_private_key: /etc/puppet/secure/keys/private_key.pkcs7.pem
    :pkcs7_public_key: /etc/puppet/secure/keys/public_key.pkcs7.pem
+   :extension: 'yaml'
