* Do not set directory environments so that r10k isn't constantly removing ones not defined in git repos

--- a/hieradata/base/foreman.yaml
+++ b/hieradata/base/foreman.yaml
@@ -14,6 +14,7 @@ foreman::db_password: >
 foreman_proxy::dhcp: true
 foreman_proxy::dns: true
 foreman_proxy::puppetca: true
+foreman_proxy::puppetrun: true
 foreman_proxy::tftp: true
 #mysql::server::root_password: ''
 #puppet::dns_alt_names:
@@ -24,4 +25,6 @@ puppet::server_certname: "%{hiera('puppetmaster')}"
 puppet::server_common_modules_path:
   - '/etc/puppet/modules'
   - '/usr/share/puppet/modules'
+puppet::server_directory_environments: true
+puppet::server_environments: []
 puppet::server_implementation: 'puppetserver'
