* Add values used by foreman-installer * Set mysql root password

--- a/hieradata/site.yaml
+++ b/hieradata/site.yaml
@@ -1,4 +1,4 @@
 ---
-#foreman_host: ''
+foreman_host: 'hepcms-foreman.umd.edu'
 foreman_repo_version: '1.8'
-#puppetmaster: ''
+puppetmaster: 'hepcms-puppet.umd.edu'
