--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -52,6 +52,7 @@ mysql::server::backup::file_per_database: true
 mysql::server::backup::time:
   - '23'
   - '5'
+nfs::manage_idmapd: false
 puppet::agent: true
 puppet::classfile: '$statedir/classes.txt'
 puppet::cron_cmd: '/usr/bin/env puppet agent --config /etc/puppet/puppet.conf --onetime --no-daemonize --noop'
