* Setup SSL cert and key for foreman proxy and foreman services on puppet master to allow the foreman proxy to use SSL cert used by Puppet server and not one generated for puppet agent * Set nameserver and domain names in site.yaml that are used in profile module

--- a/hieradata/site.yaml
+++ b/hieradata/site.yaml
@@ -1,4 +1,12 @@
 ---
+domain: 'umd.edu'
+external_domain: 'umd.edu'
+external_nameservers:
+  - '128.8.74.2'
+  - '128.8.76.2'
 foreman_host: 'hepcms-foreman.umd.edu'
 foreman_repo_version: '1.8'
+internal_domain: 'local'
+internal_nameservers:
+  - '10.1.0.2'
 puppetmaster: 'hepcms-puppet.umd.edu'
