Updated site.yaml on github to match what's on puppet

--- a/hieradata/site.yaml
+++ b/hieradata/site.yaml
@@ -6,7 +6,7 @@ external_nameservers:
   - '128.8.76.2'
 foreman_host: 'hepcms-foreman.umd.edu'
 foreman_repo_version: '1.8'
-internal_domain: 'local'
+internal_domain: 'privnet'
 internal_nameservers:
   - '10.1.0.2'
 puppetmaster: 'hepcms-puppet.umd.edu'
