use nfs puppet module instead of adding pkgs

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -82,5 +82,4 @@ r10k::sources:
     remote: 'https://github.com/UMD-HEPCMS/umd_hepcms_hiera_data'
 extra_packages:
   - 'emacs'
-  - 'nfs-utils'
-  - 'rpcbind'
+  - 'nano'
