--- a/hieradata/base/Worker/R510.yaml
+++ b/hieradata/base/Worker/R510.yaml
@@ -1,2 +1,10 @@
 ---
 firewall::ensure: 'stopped'
+nfs::manage_idmapd: true
+nfs::enable_idmapd: false
+nfs::manage_firewall: false
+nfs::nfs_mounts:
+  home:
+    device: '10.1.0.7:/data'
+    path: '/data'
+    options: 'rw,async,intr,nolock,nfsvers=3'
