Go to internal network name for /data mount
Now that I fixed internal DNS, go to internal network name rather than
numerical IP

--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -2,6 +2,6 @@
 nfs::manage_firewall: false
 nfs::nfs_mounts:
   home:
-    device: '10.1.0.7:/data'
+    device: 'r720-datanfs.privnet:/data'
     path: '/data'
     options: 'rw,async,intr,nolock,nfsvers=3'
