--- a/hieradata/base/Services.yaml
+++ b/hieradata/base/Services.yaml
@@ -2,6 +2,6 @@
 nfs::manage_firewall: false
 nfs::nfs_mounts:
   home:
-    device: '10.1.0.7:/data'
+    device: 'r720-datanfs.privnet:/data'
     path: '/data'
     options: 'rw,async,intr,nolock,nfsvers=3'
