modified hiera variables and implemented firewall

--- a/hieradata/base/Squid.yaml
+++ b/hieradata/base/Squid.yaml
@@ -1,2 +1,14 @@
 ---
 nfs::manage_firewall: false
+firewall_rules:
+  '100 allow ssh on internal network':
+    port: 22
+    proto: 'tcp'
+    source: '10.1.0.0/255.255.0.0'
+    iniface: "eth0"
+    action: 'accept'
+  '100 turn off ssh on public network':
+    port: 22
+    proto: 'tcp'
+    iniface: "eth1"
+    action: 'reject'
