turn off public ssh access in firewall

--- a/hieradata/base/CE.yaml
+++ b/hieradata/base/CE.yaml
@@ -1,2 +1,8 @@
 ---
 nfs::manage_firewall: false
+firewall_rules:
+  '002 turn off ssh on public network':
+    port: 22
+    proto: 'tcp'
+    iniface: "eth1"
+    action: 'reject'
