comment out interface experiment, add in specific facter

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -97,6 +97,8 @@ extra_packages:
   - 'nano'
   - 'ypbind'
   - 'yp-tools'
-hiera:
-   public_interface: 'eth1'
-   private_interface: 'eth0'
+#hiera:
+#   public_interface: 'eth1'
+#   private_interface: 'eth0'
+## package version specifics to use for all machines:
+facter::package_ensure: "2.4.4-1.el%{::operatingsystemmajrelease}"
