--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -22,13 +22,17 @@ firewall_rules:
     port: 22
     proto: 'tcp'
     source: '10.1.0.0/255.255.0.0'
-    iniface: "eth0"
+    iniface: "em1"
     action: 'accept'
   '002 turn off ssh on public network':
     port: 22
     proto: 'tcp'
-    iniface: "eth1"
+    iniface: "em2"
     action: 'reject'
+  '003 allow hepcms-1 to connect for disk mount':
+    iniface: "em2"
+    source: '128.8.164.13/255.255.255.0'
+    action: 'accept'    
 extra_packages:
   - 'firefox'
   - 'xfsprogs'
