--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -5,4 +5,4 @@ extra_packages:
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid:3128'
 osg::cvmfs::repositories_real:
-  - "`echo $(ls /cvmfs)|tr ' ' ,`"
+  - '`echo $(ls /cvmfs)|tr \' \' ,`'
