checking out .erb and trying things
because I'm an experimentalist

--- a/hieradata/base/Squid.yaml
+++ b/hieradata/base/Squid.yaml
@@ -12,4 +12,4 @@ firewall_rules:
     proto: 'tcp'
     iniface: "eth1"
     action: 'reject'
-selinux::mode: 'disabled'
+selinux::config: 'disabled'
