--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -9,6 +9,18 @@ nfs::exports:
     - host: '128.8.164.13/255.255.255.0'
       options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
       order: 2
+   '/data/users':
+    - host: '128.8.164.12/255.255.255.0'
+      options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
+      order: 3
+   '/data/groups':
+    - host: '128.8.164.12/255.255.255.0'
+      options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
+      order: 4    
+   '/data/osg':
+    - host: '128.8.164.12/255.255.255.0'
+      options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
+      order: 5                    
 nfs::nfs_mounts:
   home:
     device: '10.1.0.1:/export/home'
@@ -29,9 +41,9 @@ firewall_rules:
     proto: 'tcp'
     iniface: "em2"
     action: 'reject'
-  '003 allow hepcms-1 to connect for disk mount':
+  '003 allow hepcms-* to connect for disk mount':
     iniface: "em2"
-    source: '128.8.164.13/255.255.255.0'
+    source: '128.8.164.11-128.8.164.13/255.255.255.0'
     action: 'accept'    
 extra_packages:
   - 'firefox'
