--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -9,18 +9,10 @@ nfs::exports:
     - host: '128.8.164.13/255.255.255.0'
       options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
       order: 2
-   '/data/users':
+   '/data':
     - host: '128.8.164.12/255.255.255.0'
       options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
-      order: 3
-   '/data/groups':
-    - host: '128.8.164.12/255.255.255.0'
-      options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
-      order: 4    
-   '/data/osg':
-    - host: '128.8.164.12/255.255.255.0'
-      options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
-      order: 5                    
+      order: 3                  
 nfs::nfs_mounts:
   home:
     device: '10.1.0.1:/export/home'
@@ -41,11 +33,11 @@ firewall_rules:
     proto: 'tcp'
     iniface: "em2"
     action: 'reject'
-  '003 allow hepcms-0 to connect for disk mount':
-    iniface: "em2"
-    source: '128.8.164.12/255.255.255.0'
-    action: 'accept'    
-  '003 allow hepcms-1 to connect for disk mount':
+#   '003 allow hepcms-0 to connect for disk mount':
+#     iniface: "em2"
+#     source: '128.8.164.12/255.255.255.0'
+#     action: 'accept'    
+  '004 allow hepcms-1 to connect for disk mount':
     iniface: "em2"
     source: '128.8.164.13/255.255.255.0'
     action: 'accept'       
