--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -28,16 +28,16 @@ firewall_rules:
     source: '10.1.0.0/255.255.0.0'
     iniface: "em1"
     action: 'accept'
-  '002 turn off ssh on public network':
+  '004 turn off ssh on public network':
     port: 22
     proto: 'tcp'
     iniface: "em2"
     action: 'reject'
-#   '003 allow hepcms-0 to connect for disk mount':
-#     iniface: "em2"
-#     source: '128.8.164.12/255.255.255.0'
-#     action: 'accept'    
-  '004 allow hepcms-1 to connect for disk mount':
+   '003 allow hepcms-0 to connect for disk mount':
+     iniface: "em2"
+     source: '128.8.164.12/255.255.255.0'
+     action: 'accept'    
+  '002 allow hepcms-1 to connect for disk mount':
     iniface: "em2"
     source: '128.8.164.13/255.255.255.0'
     action: 'accept'       
