--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -2,25 +2,15 @@
 nfs::server: true 
 nfs::exports:
    '/data':
-    - host: '10.0.0.0/255.0.0.0'
+    - host: '10.1.0.0/16'
       options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
       order: 1
-   '/data/hadoop':
-    - host: '128.8.164.13/255.255.255.0'
+    - host: '128.8.164.13'
       options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
-      order: 2
-   '/data/users':
-    - host: '128.8.164.12/255.255.255.0'
+      order: 2      
+    - host: '128.8.164.12'
       options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
-      order: 3                  
-   '/data/groups':
-    - host: '128.8.164.12/255.255.255.0'
-      options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
-      order: 4 
-   '/data/osg':
-    - host: '128.8.164.12/255.255.255.0'
-      options: 'fsid=1,rw,async,no_subtree_check,no_root_squash'
-      order: 5        
+      order: 3         
 nfs::nfs_mounts:
   home:
     device: '10.1.0.1:/export/home'
