--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -29,10 +29,12 @@ firewall_rules:
     iniface: "em2"
     source: '128.8.164.13'
     action: 'accept' 
+    proto: 'all'    
   '003 allow hepcms-0 to connect for disk mount': 
     iniface: "em2"
     source: '128.8.164.12'
-    action: 'accept'      
+    action: 'accept'    
+    proto: 'all'      
   '004 turn off ssh on public network':
     port: 22
     proto: 'tcp'
