remove ypbind and yptools
moving to nisclient puppet package

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -95,8 +95,8 @@ r10k::sources:
 extra_packages:
   - 'emacs'
   - 'nano'
-  - 'ypbind'
-  - 'yp-tools'
+#  - 'ypbind'
+#  - 'yp-tools'
 #hiera:
 #   public_interface: 'eth1'
 #   private_interface: 'eth0'
