--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -14,5 +14,6 @@ extra_packages:
   - 'tmux'
   - 'screen'
   - 'xemacs'
+#  - 'condor.x86_64'
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
