was missing proper configuration in cvmfs for datanfs
INT add krb5-workstation (installed by hand already)

--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -47,3 +47,5 @@ extra_packages:
   - 'freeipmi'
   - 'srvadmin-idrac7'
   - 'OpenIPMI'
+osg::cvmfs::http_proxies: 
+  - 'http://hepcms-squid.privnet:3128'
