--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -14,6 +14,7 @@ extra_packages:
   - 'tmux'
   - 'screen'
   - 'xemacs'
+  - 'krb5-workstation'
 #  - 'condor.x86_64'
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
