--- a/hieradata/base/CE.yaml
+++ b/hieradata/base/CE.yaml
@@ -8,3 +8,5 @@ firewall_rules:
     action: 'reject'
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
+osg::cvmfs::cms_local_site:
+  - 'T3_US_UMD'
