--- a/hieradata/base/Worker.yaml
+++ b/hieradata/base/Worker.yaml
@@ -2,6 +2,6 @@
 firewall::ensure: 'stopped'
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
-osg::cvmfs::cms_local_site:
-  - 'T3_US_UMD'
+# osg::cvmfs::cms_local_site:
+#   - 'T3_US_UMD'
 # classes: gcc
