--- a/hieradata/base/DataNFS.yaml
+++ b/hieradata/base/DataNFS.yaml
@@ -49,5 +49,4 @@ extra_packages:
   - 'OpenIPMI'
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
-# osg::cvmfs::cms_local_site:
-#   - 'T3_US_UMD'
+osg::cvmfs::cms_local_site: T3_US_UMD
