forgot to click "save"

--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -5,3 +5,6 @@ extra_packages:
   - 'freeipmi'
   - 'OpenIPMI'
   - 'srvadmin-idrac7'
+osg::cvmfs::http_proxies: 
+  - 'http://hepcms-squid.privnet:3128'
+osg::cvmfs::cms_local_site: T3_US_UMD
