more possible methods, doesn't parse right...

--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -22,7 +22,7 @@ osg::cvmfs::cms_local_site: T3_US_UMD
 firewall::ensure: 'running'
 firewall_rules:
    '004 Condor ports open':
-     dport: [9000:9999]
+     port: "[9000, 9999]"
      proto: "tcp"
      action: 'accept' 
 # -A INPUT -m comment --comment "Condor ports open" -m state --state NEW -p tcp -m tcp --dport 9000:9999 -j ACCEPT
