--- a/hieradata/base/NameNode.yaml
+++ b/hieradata/base/NameNode.yaml
@@ -1,2 +1,7 @@
 ---
 nfs::manage_firewall: false
+yum_cron::yum_autoupdate_ensure: 'disabled' # This is default if module detects Scientific Linux
+yum_cron::yum_autoupdate_ensure: 'absent' # Completely removes yum-autoupdate from Scientific Linux
+yum_cron::service_ensure: 'stopped'
+yum_cron::service_enable: false
+yum_cron::service_autorestart: false
