--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -19,7 +19,7 @@ extra_packages:
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
 osg::cvmfs::cms_local_site: T3_US_UMD
-osg::cvmfs::cache_base: '/var/cache/cvmfs'
+osg::cvmfs::cache_base: '/scratch/cvmfs'
 firewall::ensure: 'running'
 firewall_rules:
    '004 Condor ports open':
