setting up gums

--- a/hieradata/base/GUMS.yaml
+++ b/hieradata/base/GUMS.yaml
@@ -1,4 +1,6 @@
 ---
 nfs::manage_firewall: false
 selinux::mode: 'enforcing'
-firewall::ensure: 'stopped'
+#firewall::ensure: 'stopped'
+osg::gums::db_password: 
+  - 'secret'
