--- a/hieradata/base/VMTest.yaml
+++ b/hieradata/base/VMTest.yaml
@@ -28,5 +28,6 @@ firewall_rules:
      proto: "tcp"
      action: 'accept' 
 # -A INPUT -m comment --comment "Condor ports open" -m state --state NEW -p tcp -m tcp --dport 9000:9999 -j ACCEPT
-
-# classes: gcc
+classes:
+  - osg
+  - profile::osg::hadoop_client
