--- a/hieradata/base/GUMS.yaml
+++ b/hieradata/base/GUMS.yaml
@@ -7,3 +7,5 @@ osg::cvmfs::http_proxies:
   - 'http://hepcms-squid.privnet:3128'
 osg::cvmfs::cms_local_site: T3_US_UMD
 osg::cvmfs::cache_base: '/scratch/cvmfs'
+classes: 
+  - profile::osg::hadoop_client
