--- a/hieradata/base/CE.yaml
+++ b/hieradata/base/CE.yaml
@@ -9,3 +9,5 @@ firewall_rules:
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
 osg::cvmfs::cms_local_site: T3_US_UMD
+classes: 
+  - profile::osg::hadoop_client
