--- a/hieradata/base/Worker/R510.yaml
+++ b/hieradata/base/Worker/R510.yaml
@@ -4,3 +4,5 @@ nfs::manage_firewall: false
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
 osg::cvmfs::cms_local_site: T3_US_UMD
+classes: 
+  - profile::osg::hadoop_client
