--- a/hieradata/base/GUMS.yaml
+++ b/hieradata/base/GUMS.yaml
@@ -2,7 +2,8 @@
 nfs::manage_firewall: false
 selinux::mode: 'enforcing'
 #firewall::ensure: 'stopped'
-osg::gums::db_password: 'secret'
+# need to encrypt this, set it locally for now
+#osg::gums::db_password: 'secret'
 osg::cvmfs::http_proxies: 
   - 'http://hepcms-squid.privnet:3128'
 osg::cvmfs::cms_local_site: T3_US_UMD
