move cvmfs settings to common
but only include cvmfs in classes where appropriate (working on moving
class settings to yaml files instead of hepcms-foreman web settings for
host groups.

--- a/hieradata/base/VMTest.yaml
+++ b/hieradata/base/VMTest.yaml
@@ -17,10 +17,6 @@ extra_packages:
   - 'krb5-workstation'
   - 'osg-pki-tools'
 #  - 'condor.x86_64'
-osg::cvmfs::http_proxies: 
-  - 'http://hepcms-squid.privnet:3128'
-osg::cvmfs::cms_local_site: T3_US_UMD
-osg::cvmfs::cache_base: '/scratch/cvmfs'
 firewall::ensure: 'running'
 firewall_rules:
    '004 Condor ports open':
@@ -31,3 +27,6 @@ firewall_rules:
 classes:
   - osg
   - profile::osg::hadoop_client
+  - osg::cvmfs
+  - osg::cacerts
+  - osg::cacerts::updater  
