CVMFS settings to common
and use classes to implement it

--- a/hieradata/base/CE.yaml
+++ b/hieradata/base/CE.yaml
@@ -6,8 +6,8 @@ firewall_rules:
     proto: 'tcp'
     iniface: "eth1"
     action: 'reject'
-osg::cvmfs::http_proxies: 
-  - 'http://hepcms-squid.privnet:3128'
-osg::cvmfs::cms_local_site: T3_US_UMD
 classes: 
   - profile::osg::hadoop_client
+  - osg::cvmfs
+  - osg::cacerts
+  - osg::cacerts::updater      
