--- a/hieradata/base/GUMS.yaml
+++ b/hieradata/base/GUMS.yaml
@@ -4,9 +4,8 @@ selinux::mode: 'enforcing'
 #firewall::ensure: 'stopped'
 # need to encrypt this, set it locally for now
 #osg::gums::db_password: 'secret'
-osg::cvmfs::http_proxies: 
-  - 'http://hepcms-squid.privnet:3128'
-osg::cvmfs::cms_local_site: T3_US_UMD
-osg::cvmfs::cache_base: '/scratch/cvmfs'
 classes: 
   - profile::osg::hadoop_client
+#   - osg::cvmfs
+#   - osg::cacerts
+#   - osg::cacerts::updater    
