--- a/hieradata/base/Worker/R720.yaml
+++ b/hieradata/base/Worker/R720.yaml
@@ -5,8 +5,8 @@ extra_packages:
   - 'freeipmi'
   - 'OpenIPMI'
   - 'srvadmin-idrac7'
-osg::cvmfs::http_proxies: 
-  - 'http://hepcms-squid.privnet:3128'
-osg::cvmfs::cms_local_site: T3_US_UMD
 classes: 
   - profile::osg::hadoop_client
+  - osg::cvmfs
+  - osg::cacerts
+  - osg::cacerts::updater
