remove gums from yaml
will work on “by hand” install before puppetizing

--- a/hieradata/base/GUMS.yaml
+++ b/hieradata/base/GUMS.yaml
@@ -8,5 +8,5 @@ classes:
   - profile::osg::hadoop_client
   - osg::cacerts
   - osg::cacerts::updater    
-  - osg::gums
+#  - osg::gums
 #    - osg::cvmfs  
