--- a/hieradata/base/SE.yaml
+++ b/hieradata/base/SE.yaml
@@ -7,7 +7,7 @@ firewall_rules:
     iniface: "eth1"
     action: 'reject'
   '003 allow GRAM callback inbound':
-    port: "40000:40199"
+    port: 40000-40199
     proto: "tcp"
     action: 'accept'
   '004 allow GRAM callback outbound':
