Updated INT.YAML - Added osg::wn package
SO that hepcms-in1 will have the voms package available

--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -29,5 +29,6 @@ classes:
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater    
+  - osg::wn
 # classes: gcc
 osg::cvmfs::quota_limit: '40000'
