added the GridFTP profile

--- a/hieradata/base/GridFTP.yaml
+++ b/hieradata/base/GridFTP.yaml
@@ -33,6 +33,7 @@ firewall_rules:
 
 classes: 
   - profile::osg::hadoop_client  
+  - profile::osg::gridftp
   - osg::gridftp
   - osg::cvmfs
   - osg::cacerts
