--- a/hieradata/base/CE.yaml
+++ b/hieradata/base/CE.yaml
@@ -7,11 +7,11 @@ firewall_rules:
     iniface: "eth1"
     action: 'reject'
   '003 HTCondor-CE port':
-    port: '9619'
+    dport: '9619'
     proto: "tcp"
     action: 'accept'
   '004 HTCondor-CE shared_port daemon port':
-    port: '9620'
+    dport: '9620'
     proto: "tcp"
     action: 'accept'
   '005 Condor ports open':
