--- a/hieradata/base/INT.yaml
+++ b/hieradata/base/INT.yaml
@@ -26,6 +26,7 @@ firewall_rules:
 # -A INPUT -m comment --comment "Condor ports open" -m state --state NEW -p tcp -m tcp --dport 9000:9999 -j ACCEPT
 classes:
   - profile::osg::hadoop_client
+  - profile::interactive
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater    
