added osg release 3.3

--- a/hieradata/base/CE.yaml
+++ b/hieradata/base/CE.yaml
@@ -22,12 +22,13 @@ firewall_rules:
     sport: '9619'
     proto: "tcp"
     action: 'accept'
+osg::osg_release: '3.3'
 classes: 
   - profile::osg::hadoop_client
   - profile::osg::ce
   - profile::osg::ce:install
   - profile::osg::ce::configure
-  - profile::osg::ce:service
+  - profile::osg::ce::service
   - osg::cvmfs
   - osg::cacerts
   - osg::cacerts::updater      
